--- a/randomDogApp/Base.lproj/Main.storyboard
+++ b/randomDogApp/Base.lproj/Main.storyboard
@@ -15,19 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Random Dogs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ciC-eD-gaz">
-                                <rect key="frame" x="79" y="118" width="234" height="66"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NTM-es-eTK">
+                                <rect key="frame" x="34" y="245" width="325" height="249"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ciC-eD-gaz">
+                                <rect key="frame" x="79" y="659" width="234" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="Fe1-QC-svK"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7f-me-58p">
-                                <rect key="frame" x="119" y="588" width="154" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7f-me-58p">
+                                <rect key="frame" x="119" y="549" width="154" height="67"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="PwP-iL-pGp"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="GET!">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
@@ -37,16 +45,37 @@
                                     <action selector="getBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y1t-vc-oxW"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="NTM-es-eTK">
-                                <rect key="frame" x="34" y="245" width="325" height="249"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udx-Yt-yN3">
+                                <rect key="frame" x="34" y="48" width="325" height="162"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="162" id="OJm-tu-7vd"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="udx-Yt-yN3" firstAttribute="leading" secondItem="NTM-es-eTK" secondAttribute="leading" id="3Yg-4y-ioC"/>
+                            <constraint firstItem="udx-Yt-yN3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34" id="MwJ-tB-nIe"/>
+                            <constraint firstItem="T7f-me-58p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="119" id="Umj-P9-hAh"/>
+                            <constraint firstItem="T7f-me-58p" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VH1-US-idM"/>
+                            <constraint firstItem="NTM-es-eTK" firstAttribute="centerX" secondItem="T7f-me-58p" secondAttribute="centerX" id="XUM-7X-q8z"/>
+                            <constraint firstItem="ciC-eD-gaz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="79" id="ekA-GL-blU"/>
+                            <constraint firstItem="T7f-me-58p" firstAttribute="centerX" secondItem="ciC-eD-gaz" secondAttribute="centerX" id="fuu-no-WUr"/>
+                            <constraint firstItem="ciC-eD-gaz" firstAttribute="top" secondItem="T7f-me-58p" secondAttribute="bottom" constant="43" id="mGD-ie-Weo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ciC-eD-gaz" secondAttribute="bottom" constant="93" id="msR-z8-qO3"/>
+                            <constraint firstItem="T7f-me-58p" firstAttribute="top" secondItem="NTM-es-eTK" secondAttribute="bottom" constant="55" id="n0l-2g-pBF"/>
+                            <constraint firstItem="udx-Yt-yN3" firstAttribute="trailing" secondItem="NTM-es-eTK" secondAttribute="trailing" id="pLN-Pb-cNR"/>
+                            <constraint firstItem="udx-Yt-yN3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-11" id="pt9-y3-Gdb"/>
+                            <constraint firstItem="NTM-es-eTK" firstAttribute="top" secondItem="udx-Yt-yN3" secondAttribute="bottom" constant="35" id="uRc-li-KqV"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="getBtn" destination="T7f-me-58p" id="0aU-Vh-8Ex"/>
                         <outlet property="imageView" destination="NTM-es-eTK" id="zTT-aF-Eez"/>
+                        <outlet property="nameLabel" destination="ciC-eD-gaz" id="6yT-ve-MiV"/>
+                        <outlet property="pickerLabel" destination="udx-Yt-yN3" id="SbX-QZ-xC5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -54,7 +83,4 @@
             <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="dog" width="500" height="339"/>
-    </resources>
 </document>
